crates/next-custom-transforms/tests/errors/server-actions/client-graph/2/input.js
'use client'

export default function App() {
  async function fn() {
    'use cache'
  }
  return <div>App</div>
}
